--- a/web/blog1.html
+++ b/web/blog1.html
@@ -88,7 +88,7 @@
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
-				<div class="col-md-7 text-left">
+				<div class="col-md-10 text-left">
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeInUp">
 							<span class="date-post">这个地方放一些要紧的东西吧</span>
@@ -109,8 +109,8 @@
 					<article class="mt-negative">
 						<div class="text-left content-article">
 							<div class="row">
-								<div class="col-lg-4 animate-box">
-									<div class="article gtco-highlight right" style="width: 50%; ">
+								<div class="col-lg-12 animate-box">
+									<div class="article gtco-highlight right" style="width: 30%; ">
 										<!--<h4>Highlight</h4>-->
 										<p class="titi" >Time：<br>2018-12-4 12:53</p>
 										<p class="titi" >心情：平静</p>
@@ -118,6 +118,13 @@
 									</div>
 								</div>
 								<div class="col-lg-8 cp-r animate-box">
+									<p>《共产党宣言》包括引言和正文四章。1872年—1893年，马克思和恩格斯先后为《宣言》的德文、俄文、英文、波兰文、意大利文版撰写了七篇序言。七篇序言简要说明了《宣言》的基本思想及其在国际共产主义运动中的历史地位，指明《宣言》的理论原理是历史唯物主义，并根据无产阶级革命的经验和教训，对《宣言》作了补充和修改。</p>
+
+									<!--<p>《共产党宣言》是第一部较为完整而系统地阐述科学社会主义基本原理的伟大著作。是马克思主义的百科全书，是马克思主义哲学、政治经济学、科学社会主义、党的建设思想的集中体现。书中全面系统地阐明了马克思主义的基本原理，特别是历史唯物主义和科学社会主义的基本原理，揭示了资本主义必然灭亡、社会主义必然胜利的趋势和途径。 [6]  它标志着马克思主义的诞生，开辟了国际工人运动和社会主义运动的新局面，为无产阶级和全人类打开了通向未来的大门，为人的全面发展和全人类解放指明了路径 ，成为世界无产阶级的锐利思想武器。 </p>-->
+
+									<!--<p>《共产党宣言》运用了辩证唯物主义和历史唯物主义分析生产力与生产关系、经济基础与上层建筑的矛盾，分析阶级和阶级斗争，特别是资本主义社会阶级斗争的产生、发展过程，论证资本主义必然灭亡和社会主义必然胜利的客观规律，作为资本主义掘墓人的无产阶级肩负的世界历史使命。</p>-->
+								</div>
+								<div class="col-lg-10 cp-r animate-box">
 									<p>《共产党宣言》包括引言和正文四章。1872年—1893年，马克思和恩格斯先后为《宣言》的德文、俄文、英文、波兰文、意大利文版撰写了七篇序言。七篇序言简要说明了《宣言》的基本思想及其在国际共产主义运动中的历史地位，指明《宣言》的理论原理是历史唯物主义，并根据无产阶级革命的经验和教训，对《宣言》作了补充和修改。</p>
 
 									<p>《共产党宣言》是第一部较为完整而系统地阐述科学社会主义基本原理的伟大著作。是马克思主义的百科全书，是马克思主义哲学、政治经济学、科学社会主义、党的建设思想的集中体现。书中全面系统地阐明了马克思主义的基本原理，特别是历史唯物主义和科学社会主义的基本原理，揭示了资本主义必然灭亡、社会主义必然胜利的趋势和途径。 [6]  它标志着马克思主义的诞生，开辟了国际工人运动和社会主义运动的新局面，为无产阶级和全人类打开了通向未来的大门，为人的全面发展和全人类解放指明了路径 ，成为世界无产阶级的锐利思想武器。 </p>
@@ -152,7 +159,11 @@
 							</div>
 
 							<div class="row row-pb-sm">
-								<div class="col-lg-6 col-lg-push-6 col-md-12 col-md-push-0 animate-box">
+								<div class="col-lg-6 col-md-12 animate-box">
+									<p>十月革命第一次成功建立了社会主义制度的国家，也被认为是无产阶级第一次掌握政权，是人类历史上一次意义重大的变革。十月革命也对其他国家的社会进步（比如中国）产生了重大影响，1917年11月7日，“十月革命”爆发当天，刘镜人在致北京政府外交部的电报中说：“近俄内争益烈，广义派势力益张，要求操政权，主和议，并以暴动相挟制。政府力弱，镇压为难，恐变在旦夕。”随着十月革命对中国影响的扩大，《新青年》开始宣传马克思主义。中国共产党的领袖毛泽东曾经评价：“十月革命一声炮响，为我们送来了马克思主义。”“中国无产阶级的先锋队，在十月革命以后学了马克思列宁主义，建立了中国共产党。</p>
+									<p>俄国十月社会主义革命是人类历史上第一次获得胜利的社会主义革命，世界上第一个社会主义国家由此诞生。十月革命的胜利沉重打击了帝国主义的统治，推动了国际社会主义运动的发展，鼓舞了殖民地半殖民地人民的解放斗争。</p>
+								</div>
+								<div class="col-lg-6 col-md-12 col-md-push-0 animate-box">
 									<figure>
 										<img src="images/blog1_2.jpg" alt="Free HTML5 Bootstrap Template by GetTemplates.co" class="img-responsive" >
 										<figcaption>十月革命</figcaption>
@@ -162,27 +173,20 @@
 							</div>
 
 							<div class="row">
-								<div class="col-md-12 animate-box">
-									<p>十月革命第一次成功建立了社会主义制度的国家，也被认为是无产阶级第一次掌握政权，是人类历史上一次意义重大的变革。十月革命也对其他国家的社会进步（比如中国）产生了重大影响，1917年11月7日，“十月革命”爆发当天，刘镜人在致北京政府外交部的电报中说：“近俄内争益烈，广义派势力益张，要求操政权，主和议，并以暴动相挟制。政府力弱，镇压为难，恐变在旦夕。”随着十月革命对中国影响的扩大，《新青年》开始宣传马克思主义。中国共产党的领袖毛泽东曾经评价：“十月革命一声炮响，为我们送来了马克思主义。”“中国无产阶级的先锋队，在十月革命以后学了马克思列宁主义，建立了中国共产党。</p>
-									<p>俄国十月社会主义革命是人类历史上第一次获得胜利的社会主义革命，世界上第一个社会主义国家由此诞生。十月革命的胜利沉重打击了帝国主义的统治，推动了国际社会主义运动的发展，鼓舞了殖民地半殖民地人民的解放斗争。</p>
-								</div>
-								<div class="col-md-4 animate-box">
+
+								<div class="col-md-6 animate-box">
 									<figure>
 										<img src="images/blog1_1.jpg" alt="手稿" class="img-responsive">
 										<figcaption> 现存的唯一一张《共产党宣言》手稿</figcaption>
 									</figure>
 								</div>
-
-								<div class="col-md-12 animate-box">
-									<p>共产主义的本质特征就是人民能够当家做主，也就是说民主、自由是公有制社会与私有制社会的根本区别， 同时公有制社会是人类意识形态的高级阶段，私有制社会是人类意识形态的低级阶段。</p>
-								</div>
-							</div>
-							<div class="col-lg-6 col-md-12 cp-l animate-box">
+								<div class="col-lg-6 col-md-12 cp-l animate-box">
 								<p>共产主义（Communism）是一种政治观点和思想体系，现今的共产主义奉马克思、恩格斯思想为基本思想。共产主义主张消灭生产资料私有制，并建立一个没有阶级制度、没有剥削、没有压迫，实现人类自我解放的社会，也是社会化集体大生产的社会，面对恶势力也会团结一致。共产主义者认为未来所有阶级社会最终将过渡到各尽所能 各取所需的共产主义社会，人类社会的意识形态将进入高级阶段 </p>
 
 								<p>社会主义（socialism）一词源于拉丁文。是一种经济社会学思想，主张或提倡整个社会作为整体，由社会拥有和控制产品、资本、土地、资产等，其管理和分配基于公众利益。在19世纪30至40年代，“社会主义”一词在西欧广为流传。马克思、恩格斯使用了“社会主义”一词，并作了科学解释，社会主义是资本主义和共产主义之间的过渡。</p>
 
 								<p>简易地说，人类社会是一个群体的社会，在群体社会的管理过程中人们对社会资源占有( 或社会分配 )的方式,，大概可以分成三种形式：『两极分化』即一小撮人占有社会的绝大部分资源，也就是人们的贫富差距很大，占有绝大部分社会资源的一小撮人就是统治阶级；『相对平等』即整个社会的人们贫富差距不大，仍旧是私有制社会，人们各自的财产被限制在社会相对均匀的数量里， 控制社会财富分配的是统治阶级；『按需所取』即人们共同占有社会资源并根据自己的需求而提取， 既社会资源已成为人们共享资源，没有私有制后也就没有统治阶级</p>
+							</div>
 							</div>
 							
 						</div>
